name:                docs-app
version:             0.1.0.0
synopsis:            OME Smuggler docs generation for GitHub pages
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Builder
  other-modules:       Paths
                     , BlackboardDiagram
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , filepath
                     , hakyll
                     , pandoc
                     , text
                     , xml-conduit
  default-language:    Haskell2010

executable docs-gen
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , docs-app
  default-language:    Haskell2010
